# cli.timetracker

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh
src/: api.rs  commands.rs  logger.rs  main.rs
