[package]
name = "timetracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timetracker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
urlencoding = "2.1"
dotenv = "0.15" 